<resources>
    <string name="app_name">CatalogueMovie</string>
    <string name="judul">Judul</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">adamnain</string>
    <string name="nav_header_subtitle">adamdzulqarnain@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="search_movie">Search Movie</string>
    <string name="favorite">Favorite</string>
    <string name="default_notification_channel_name">Favorite</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="released_today">Released Today</string>
    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="key_released_today">key_released_today</string>
    <string name="key_settings_locale">key_settings_locale</string>
    <string name="label_setting_daily_reminder_summary">Turn On/Off Notification</string>
    <string name="label_setting_locale_summary">Change Your Application Language</string>
    <string name="label_setting_locale_title">Change Application Language</string>
    <string name="action_notification">Notification</string>
    <string name="label_alarm_daily_reminder">Good morning! Ready to pick your new movies today?</string>
    <string name="label_alarm_released_today">, Now On Cinema!</string>
    <string name="label_daily_reminder">Daily Reminder Notification is now</string>
    <string name="label_activated">activated!</string>
    <string name="label_deactivated">deactivated!</string>
</resources>
