<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/action_notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily_reminder"
            android:summary="@string/label_setting_daily_reminder_summary"
            android:title="@string/daily_reminder" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_released_today"
            android:summary="@string/label_setting_daily_reminder_summary"
            android:title="@string/released_today" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/action_settings">

        <Preference
            android:key="@string/key_settings_locale"
            android:summary="@string/label_setting_locale_summary"
            android:title="@string/label_setting_locale_title" />

    </PreferenceCategory>

</PreferenceScreen>