<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeNoAction.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppThemeNoAction.PopupOverlay" />

        <!-- Menerapkan TabLayout dan ViewPager -->

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabMode="fixed"
            app:tabSelectedTextColor="#FFFFFF"
            app:tabTextColor="#FFFFFF">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_minta_cuti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/now_playing" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_riwayat_cuti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/upcoming" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_favorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/favorite" />

        </android.support.design.widget.TabLayout>


    </android.support.design.widget.AppBarLayout>


    <include layout="@layout/content_navbar" />


</android.support.design.widget.CoordinatorLayout>